--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -18,9 +18,9 @@
       <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
       <nav>
         <ul>
-          <li>projets</li>
+          <li><a href="./index.html">projets</a></li>
           <li>contact</li>
-          <li>login</li>
+          <li class="bold">login</li>
           <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
       </nav>
@@ -32,10 +32,12 @@
         <form action="#" method="post">
           <label for="email">E-mail</label>
           <input type="email" name="email" id="email" />
-          <label for="Motdepasse">Mot de passe</label>
-          <input type="text" name="name" id="name" />
+          <label for="password">Mot de passe</label>
+          <input type="password" name="password" id="password" />
           <input type="submit" value="Se connecter" />
-          <p class="center">Mot de passe oublié</p>
+          <p class="center">
+            <a href="/forgot-password">Mot de passe oublié?</a>
+          </p>
         </form>
       </section>
     </main>
@@ -47,6 +49,6 @@
         </ul>
       </nav>
     </footer>
-    <script src="js/main.js"></script>
+    <script src="js/login.js"></script>
   </body>
 </html>
