--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -20,7 +20,7 @@
         <ul>
           <li><a href="./index.html">projets</a></li>
           <li>contact</li>
-          <li class="bold">login</li>
+          <li class="bold loginItem">login</li>
           <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
       </nav>
@@ -29,7 +29,7 @@
       <section id="contact">
         <h2>Log In</h2>
 
-        <form action="#" method="post">
+        <form id="LoginForm" action="#" method="post">
           <label for="email">E-mail</label>
           <input type="email" name="email" id="email" />
           <label for="password">Mot de passe</label>
