--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -58,6 +58,7 @@
         >
           <label for="file" class="fileContainer">
             <svg
+              class="hide-on-preview"
               xmlns="http://www.w3.org/2000/svg"
               width="76"
               height="76"
@@ -70,14 +71,18 @@
               />
             </svg>
 
-            <input type="file" id="file" name="image" />
-            <span class="fileAjouterPhoto">+ Ajouter photo</span>
-            <span class="file-description">jpg, png : 4Mo max</span>
+            <input class="hide-on-preview" type="file" id="file" name="image" />
+            <span class="fileAjouterPhoto hide-on-preview"
+              >+ Ajouter photo</span
+            >
+            <span class="file-description hide-on-preview"
+              >jpg, png : 4Mo max</span
+            >
             <img
               id="previewImage"
+              class="hide-image hidden"
               src="#"
               alt="Aperçu de l'image"
-              display="none"
             />
           </label>
 
@@ -102,10 +107,9 @@
               required
             >
               <option value="" disabled selected hidden>&nbsp;</option>
-              <option value="Objets">Objets</option>
-              <option value="Appartements">Appartements</option>
-              <option value="Hôtel&restaurants">Hôtel&restaurants</option>
-              <option value="Bar&restaurants">Bar & Restaurants</option>
+              <option value="1">Objets</option>
+              <option value="2">Appartements</option>
+              <option value="3">Hôtel&restaurants</option>
             </select>
           </div>
           <span id="errorCategorie"></span>
@@ -115,7 +119,7 @@
       </div>
     </dialog>
 
-    <header>
+    <header class="modeEditionMargin">
       <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
       <nav>
         <ul>
