Ajout des messages d'erreurs de la page Login

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -85,6 +85,7 @@
               alt="Aperçu de l'image"
             />
           </label>
+          <span id="errorContainer"></span>
 
           <!-- Champ de titre -->
           <div class="inputContainer">
@@ -109,7 +110,7 @@
               <option value="" disabled selected hidden>&nbsp;</option>
               <option value="1">Objets</option>
               <option value="2">Appartements</option>
-              <option value="3">Hôtel&restaurants</option>
+              <option value="3">Hôtel & restaurants</option>
             </select>
           </div>
           <span id="errorCategorie"></span>
@@ -120,7 +121,7 @@
     </dialog>
 
     <header class="modeEditionMargin">
-      <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+      <h1>Sophie Bluel <span>ARCHITECTE D'INTÉRIEUR</span></h1>
       <nav>
         <ul>
           <li>projets</li>
