Ajout de commentaires au code JS

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -41,7 +41,7 @@
         />
       </div>
 
-      <!--Code pour l'ajout de photo-->
+      <!--Code de la fenêtre modale pour l'ajout de photo-->
 
       <div id="modal2" style="display: none">
         <i class="fa fa-arrow-left modal2-arrow"></i>
